@@ -1,0 +1,31 @@
+<Product xmlns="http://code.google.com/p/open-zwave/">
+    <!-- Telldus TZWP-100 On/Off -->
+    <!-- Configuration Parameters -->
+    <CommandClass id="112">
+        <Value type="byte" index="1" genre="config" label="Countdown timer" units="minutes" min="0" max="254" size="1" value="0">
+            <Help>
+                Number of minutes before it shutdown automatically (0 = disabled).
+            </Help>
+        </Value>
+        <Value type="list" index="2" genre="config" label="Power state" min="0" max="2" size="1" value="1">
+            <Help>
+                Define how the plug will react after the power supply is back on.
+            </Help>
+            <Item label="Always off" value="0"/>
+            <Item label="Remember status" value="1"/>
+            <Item label="Always on" value="2"/>
+        </Value>
+        <Value type="byte" index="3" genre="config" label="LED indicator" units="%" min="0" max="100" size="1" value="100">
+            <Help>
+                Set the intensity of the LED indicator (0-100).
+            </Help>
+        </Value>
+    </CommandClass>
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="1" label="Lifeline"/>
+            <Group index="2" max_associations="10" label="Control other devices"/>
+        </Associations>
+    </CommandClass>
+</Product>
